# generalizable-advanced-fake-video-detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
Video-ViT/: dataset.py  ensemble_networks.py  networks.py  parser.py  test_unseen.py  train.py  train_ensemble.py
Video-ViT/ViT_panda/: get_features.py
Video-ViT/ViT_panda/eval_configs/: panda70M_eval.yaml
Video-ViT/ViT_panda/video_llama/: __init__.py
Video-ViT/ViT_panda/video_llama/common/: config.py
Video-ViT/ViT_panda/video_llama/models/: Qformer.py  video_llama.py
Video-ViT/split/: README.md  test.txt  train.txt  val.txt
Video-ViT/utils/: fsdp_config.yaml  patch_peft.py  prepare_recontruction.py  split-dataset.py  swm.py
