[project]
name = "full-fine-tuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "antlr4-python3-runtime==4.9.3",
    "av==14.3.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.1",
    "decord==0.6.0",
    "einops==0.8.1",
    "filelock==3.18.0",
    "fsspec==2025.3.2",
    "ftfy==6.3.1",
    "fvcore==0.1.5.post20221221",
    "gdown>=5.2.0",
    "huggingface-hub==0.30.2",
    "idna==3.10",
    "iopath==0.1.10",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "matplotlib>=3.10.8",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==2.2.5",
    "nvidia-cublas-cu12==12.6.4.1",
    "nvidia-cuda-cupti-cu12==12.6.80",
    "nvidia-cuda-nvrtc-cu12==12.6.77",
    "nvidia-cuda-runtime-cu12==12.6.77",
    "nvidia-cudnn-cu12==9.5.1.17",
    "nvidia-cufft-cu12==11.3.0.4",
    "nvidia-cufile-cu12==1.11.1.6",
    "nvidia-curand-cu12==10.3.7.77",
    "nvidia-cusolver-cu12==11.7.1.2",
    "nvidia-cusparse-cu12==12.5.4.2",
    "nvidia-cusparselt-cu12==0.6.3",
    "nvidia-nccl-cu12==2.26.2",
    "nvidia-nvjitlink-cu12==12.6.85",
    "nvidia-nvtx-cu12==12.6.77",
    "omegaconf==2.3.0",
    "opencv-python==4.11.0.86",
    "packaging==25.0",
    "pandas==2.2.3",
    "parameterized==0.9.0",
    "peft @ git+https://github.com/huggingface/peft.git",
    "pillow==11.2.1",
    "portalocker==3.1.1",
    "python-dateutil==2.9.0.post0",
    "pytorchvideo==0.1.5",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "safetensors==0.5.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "six==1.17.0",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "termcolor==3.1.0",
    "timm==1.0.15",
    "tokenizers==0.21.1",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "torchvision==0.22.0",
    "tqdm==4.67.1",
    "transformers==4.51.3",
    "triton==3.3.0",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "wcwidth==0.2.13",
    "yacs==0.1.8",
]
